# FTDQMC-Studio

./: .gitignore  CMakeLists.txt  README.md  configure.sh
apps/: main.cpp
apps/ftdqmc_studio/: main.cpp
docs/: ARCHITECTURE.md  MATH_NOTES.md  ROADMAP.md  SPEC.md  input_schema.toml
docs/input_examples/: haldane_hubbard.toml  minimal.toml  spectrum_honeycomb.toml
examples/: input_chain1d.in  input_honeycomb_twist.in  input_square.in
include/ftdqmc/: Config.hpp
include/ftdqmc/config/: Config.hpp
include/ftdqmc/core/: BuildInfo.hpp  Environment.hpp  Logging.hpp  aux_field.hpp  simulation_params.hpp
include/ftdqmc/io/: simulation_params_io.hpp
include/ftdqmc/lattice/: Honeycomb.hpp  chain1d.hpp  honeycomb.hpp  lattice.hpp  square.hpp
include/ftdqmc/linalg/: DenseMatrix.hpp
include/ftdqmc/model/: KBuilder.hpp  Model.hpp
scripts/: clean_repo.sh
src/: main.cpp
src/config/: Config.cpp
src/core/: Logging.cpp  aux_field.cpp
src/io/: simulation_params_io.cpp
src/lattice/: Honeycomb.cpp  chain1d.cpp  honeycomb.cpp  square.cpp
src/model/: KBuilder.cpp
tests/: test_smoke.cpp
tests/io/: test_simulation_params_io.cpp
tests/lattice/: test_lattice.cpp
tests/unit/: test_honeycomb.cpp
